; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_merge.c_merge_msg_write_branches.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_merge.c_merge_msg_write_branches.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"branch\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"branches\00", align 1
@GIT_REFS_HEADS_DIR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i8)* @merge_msg_write_branches to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @merge_msg_write_branches(i32* %0, i32* %1, i8 signext %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8, align 1
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i8 %2, i8* %6, align 1
  %7 = load i32*, i32** %4, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = load i32, i32* @GIT_REFS_HEADS_DIR, align 4
  %10 = call i32 @strlen(i32 %9)
  %11 = load i8, i8* %6, align 1
  %12 = call i32 @merge_msg_write_entries(i32* %7, i32* %8, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32 %10, i32* null, i8 signext %11)
  ret i32 %12
}

declare dso_local i32 @merge_msg_write_entries(i32*, i32*, i8*, i8*, i32, i32*, i8 signext) #1

declare dso_local i32 @strlen(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
